--- a/rc/.tmux.conf
+++ b/rc/.tmux.conf
@@ -1,13 +1,22 @@
 ##################################################
-# General
+# Basis
 ##################################################
 set-option -g default-shell /bin/zsh
 set-option -g default-command /bin/zsh
 set-option -s escape-time 0
+set-option -g default-terminal screen-256color
 
-#set-option -g prefix C-t
-#bind-key C-t send-prefix
-#unbind-key C-b
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -t vi-copy    C-WheelUpPane   halfpage-up
+bind -t vi-copy    C-WheelDownPane halfpage-down
+bind -t emacs-copy C-WheelUpPane   halfpage-up
+bind -t emacs-copy C-WheelDownPane halfpage-down
+
+set-option -g renumber-windows on
+
 
 ##################################################
 # Keybinds
@@ -21,23 +30,33 @@ bind-key r source-file ~/.tmux.conf \; display-message "Reloaded."
 # UI
 ##################################################
 
+set-option -g status-right '#(get_ssid) #(battery -c tmux) #H [%Y-%m-%d(%a) %H:%M]'
+
+set-option -g status-left-length 10
+
 # status bar position
-#if-shell "~/dotfiles/bin/tmux-version-check 1.7" '\
-#    set -g status-position top; \
-#'
+set -g status-position top
+
+# status bar color
+set -g status-fg white
+set -g status-bg colour23 #blue
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
 
 ##################################################
 # Control
 ##################################################
-
-# mouse
-#if-shell "~/dotfiles/bin/tmux-version-check 2.0" '\
-#    set -g mouse on; \
-#'
-
-#scroll
-set-window-option -g mode-mouse on
 
 #esc time
 set -s escape-time 0
