--- a/rc/.tmux.conf
+++ b/rc/.tmux.conf
@@ -5,6 +5,7 @@ set-option -g default-shell /bin/zsh
 set-option -g default-command /bin/zsh
 set-option -s escape-time 0
 set-option -g default-terminal screen-256color
+set-option -g history-limit 10000
 
 set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
@@ -17,6 +18,24 @@ bind -t emacs-copy C-WheelDownPane halfpage-down
 
 set-option -g renumber-windows on
 
+
+##################################################
+# Copymode
+##################################################
+
+set-window-option -g mode-keys vi
+bind-key v copy-mode \; display "Copy mode!"
+
+# Use prefix-y to yank
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \; display "yanked"
+bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy" \; display "yanked"
+
+# Use prefix-p (or Cmd-v) to paste
+bind-key p paste-buffer
+
+# Other Keys
+#
+# begin-selection: Shift + V
 
 ##################################################
 # Keybinds
