--- a/rc/.tmux.conf
+++ b/rc/.tmux.conf
@@ -27,8 +27,8 @@ set-window-option -g mode-keys vi
 bind-key v copy-mode \; display "Copy mode!"
 
 # Use prefix-y to yank
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \; display "yanked"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy" \; display "yanked"
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Use prefix-p (or Cmd-v) to paste
 bind-key p paste-buffer
